=== shared-mime-info 0.21 ===

2007-04-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.21

2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Correct the magic for RTSPtext metalinks
	(See http://bugzilla.gnome.org/show_bug.cgi?id=429383)

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add X11 cursor type (#10043).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add DirectDraw surface type (#10083).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add pattern and description for KSysV init
	type (#10040). Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add matchlets for OpenOffice.org types
	(#10100). Thanks to Pino Toscano <toscano.pino@tiscali.it> and Oliver
	Braun <Oliver.Braun@sun.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of raw camera image types
	(#8170). Thanks to Udi Fuchs <udifuchs@gmail.com>, Stanislav Brabec
	<sbrabec@suse.cz> and Frederic Crozat <fcrozat@mandriva.com>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add PKCS#10 certification request type
	(#10076). Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add "*.iso9660" glob for ISO 9660 files
	(#10130).  Thanks to Sebastian Dröge (slomo@circular-chaos.org).

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add PSF, miniPSF, PSFlib types, add
	gzippd PSF linux font type, properly subclass all gzipped types
	(#853). Thanks to Jo Valentine-Cooper <jvc@menagerie.tf>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>
